--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <td class ="tamanho1"> <div class="atm"> <div class="maior" id="login"> LOGIN </div> <img src="usario.png" alt="" width="75px" height="40px">  </div> </td>
     </tr> 
     <tr id = "tr2">
-        <td colspan="3" class="cinza">  <h1 class="centro">TechHardWare</h1> <p class="centro">As melhores ofertas em tecnologia, hardware e games estão prontas para voçê conferir</p></td>
+        <td colspan="3" class="cinza">  <h1 class="centro">TechHardWare</h1> <p class="centro">As melhores ofertas em tecnologia, hardware e games estão prontas para você conferir</p></td>
       
         
         <td colspan="5"> <img src="asdatualizado.png" alt="100%" width="100%" height=""></td>
