--- a/index2.html
+++ b/index2.html
@@ -22,9 +22,9 @@
         <td colspan="8" class="arre"> <H2 class="centro">QUEM SOMOS</H2> </td>
     </tr>
     <tr id = "tr3">
-        <td colspan="3"> <h1>Na TechHardware, nossa missão é fornecer soluções inovadoras e de alta qualidade para os entusiastas de tecnologia e profissionais exigentes. Especializados na fabricação de componentes de hardware, como placas-mãe e placas de vídeo, buscamos constantemente a excelência em cada produto que desenvolvemos.
+        <td colspan="3">  <div class="ultimo"> <h1>Na TechHardware, nossa missão é fornecer soluções inovadoras e de alta qualidade para os entusiastas de tecnologia e profissionais exigentes. Especializados na fabricação de componentes de hardware, como placas-mãe e placas de vídeo, buscamos constantemente a excelência em cada produto que desenvolvemos.
           Nosso propósito é empoderar nossos clientes com a melhor tecnologia disponível, ajudando-os a alcançar o máximo desempenho, seja em ambientes de trabalho intensivos ou no universo dos jogos. Acreditamos que, ao combinar inovação, durabilidade e precisão, podemos transformar a experiência digital de nossos usuários e contribuir para o avanço tecnológico de forma significativa.
-            Estamos comprometidos com a criação de produtos que não apenas atendem às necessidades do presente, mas também antecipam as demandas do futuro, tornando a TechHardware uma referência de confiança no mercado de hardware</h1>   </td>
+            Estamos comprometidos com a criação de produtos que não apenas atendem às necessidades do presente, mas também antecipam as demandas do futuro, tornando a TechHardware uma referência de confiança no mercado de hardware</h1> </div>   </td>
         <td colspan="5"> <div class="centro"> <img src="pcs.png" alt="" width="90%" height="600px"> </div> </td>
         
     </tr>
